# WRoverPlayground

./: .clang-tidy  .clangd  .gitignore  LICENSE  PlanningDoc.md  README.md  ROS_Setup.md  ROS_Tools.md  onStart.sh  requirements.txt  test.py
.devcontainer/: devcontainer.json
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: gui.pc  wrover_mock.pc
devel/share/gui/cmake/: guiConfig.cmake
devel/share/wrover_mock/cmake/: wrover_mockConfig.cmake
src/debug_training/: CMakeLists.txt  ROS_Tools.md  package.xml
src/gui/: CMakeLists.txt
src/gui/src/: gui.py
src/package_training/: Package_Training.md  ROS_Setup.md
src/package_training/msg/: HelloMsg.msg
src/package_training/src/: main.py
src/package_training/srv/: HelloSrv.srv
src/robot_sim_gui/: CMakeLists.txt  Robot.py  RobotSimCanvas.py  gui.py  package.xml  setup.py
src/robot_sim_gui/launch/: robot_sim_gui.launch
src/robot_sim_gui/msg/: DrivePower.msg  IRSensorData.msg
src/robot_sim_gui/nodes/: gui.py
src/robot_sim_gui/src/robot_sim_gui/: Robot.py  RobotSimCanvas.py  StatusLight.py
src/robot_sim_gui/srv/: ContinuationStatus.srv  LightStatus.srv
src/service_training/: CMakeLists.txt  Service_Training.md  package.xml  setup.py
src/service_training/launch/: service_training.launch
src/service_training/src/: DemoClient.cpp  DemoClient.py  DemoServer.cpp  DemoServer.py  ServiceChallenge.cpp  ServiceChallenge.py
src/service_training/srv/: ContinueNavigation.srv  ServiceLight.srv
src/topic_training/: CMakeLists.txt  Topic_Training.md  package.xml
src/topic_training/launch/: topic_training.launch
src/topic_training/msg/: CustomType.msg
src/topic_training/src/: Begin_Here.md  Demo.cpp  Demo.py  MotorChallenge.cpp  MotorChallenge.py  PlotDemo.cpp  PlotDemo.py  PubSubDemo.cpp  PubSubDemoCPP.cpp  PubSubDemoPY.py  Start_Here.md  Training.md
src/wrover_controller/: CMakeLists.txt  package.xml
src/wrover_controller/src/: controller.py
src/wrover_mock/: CMakeLists.txt
src/wrover_mock/launch/: std.launch
src/wrover_mock/src/: AbstractRobot.py  Robot.py
src/wrover_status_light/: CMakeLists.txt  ServiceIntro.md  package.xml  setup.py
src/wrover_status_light/src/: DemoClient.cpp  DemoClient.py  DemoServer.cpp  DemoServer.py
src/wrover_status_light/srv/: ServiceLight.srv
tools/docker/: Dockerfile
wrover_status_light/: CMakeLists.txt  ServiceIntro.md
